Update API docs and album counts
